# llm-eval-harness

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  hf_spaces_README.md  pyproject.toml  spaces_app.py
dashboard/: app.py
evaluator/: __init__.py  core.py
evaluator/datasets/: __init__.py  loader.py  sample_qa.jsonl
evaluator/metrics/: __init__.py  _hf_worker.py  accuracy.py  cost.py  hallucination.py  latency.py  ragas_metrics.py
evaluator/reporter/: __init__.py  console.py  html_report.py  json_exporter.py
evaluator/runners/: __init__.py  anthropic_runner.py  groq_runner.py  openai_runner.py
results/: claude_haiku.html  claude_haiku.json  claude_haiku_full.html  claude_haiku_full.json  claude_opus.html  claude_opus.json  claude_opus_full.html  claude_opus_full.json  groq_70b.html  groq_70b.json  groq_70b_full.html  groq_70b_full.json  groq_8b.html  groq_8b.json  groq_8b_full.html  groq_8b_full.json
scripts/: run_eval.py
tests/: test_metrics.py  test_reporter.py  test_runners.py
