[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval-harness"
version = "1.0.0"
description = "Production-grade LLM evaluation harness for benchmarking language models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Engineer", email = "engineer@example.com" }]
keywords = ["llm", "evaluation", "benchmarking", "ai", "machine-learning", "ragas"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.35.0",
    "anthropic>=0.30.0",
    "groq>=0.9.0",
    "ragas>=0.1.9",
    "deepeval>=0.21.0",
    "sentence-transformers>=2.7.0",
    "tiktoken>=0.7.0",
    "transformers>=4.41.0",
    "torch>=2.3.0",
    "rich>=13.7.0",
    "plotly>=5.22.0",
    "streamlit>=1.35.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "datasets>=2.19.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
llm-eval = "scripts.run_eval:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["evaluator"]
